# vendor-qcom-opensource-audioreach-conf

./: Android.mk  CONTRIBUTING.md  Makefile.am  README.md  configure.ac
qcom/: Makefile.am  kvh2xml.pc.in
